--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -228,3 +228,129 @@
     }
 }
 
+.service-lists{
+    font-family: "Nexa Bold", sans-serif;
+    font-size: 20px;
+    font-weight: 900;
+    line-height: 28.5714px;
+    color: rgb(34, 33, 33);
+    border:1px solid #f4d5d6;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+}
+.service-lists:hover{
+    color: white;
+    background-color: #ef4444;
+}
+
+.products-section {
+    /* background-color: #f9f9f9; */
+    .top-section{
+        .products-header{
+            font-family: Roboto, sans-serif;
+            font-size: 15px;
+            font-weight: 700;
+            line-height: 25.5px;
+            color: rgb(255, 255, 255);
+        }
+        .products-subtext{
+            font-family: Roboto, sans-serif;
+            font-size: 40px;
+            font-weight: 700;
+            line-height: 40px;
+            color: rgb(255, 255, 255);
+            /* color: rgb(2, 15, 66); */
+        }
+        .products-subtext2{
+            font-family: "Open Sans", sans-serif;
+            font-size: 17px;
+            font-weight: 400;
+            line-height: 28.9px;
+            color: rgb(255, 255, 255);
+        }
+    }
+
+}
+
+.case-studies{
+    .header-section{
+        .left-side{
+            font-family: Roboto, sans-serif;
+            font-size: 57px;
+            font-weight: 700;
+            line-height: 62.7px;
+            color: rgb(0, 0, 0);
+            width: 50%;
+            .products-subtext{
+                font-family: "Open Sans", sans-serif;
+                font-size: 17px;
+                font-weight: 400;
+                line-height: 28.9px;
+                color: rgb(75, 79, 88);
+            }
+        }
+        .right-side{
+            width: 50%;
+        }
+    }
+    .hero-section{
+        .card{
+            width: 50%;
+            background-color: #f8dfe4;
+            align-items: center;
+            border-radius: 10px;
+            /* padding-top: 5%; */
+            height: 500px;
+            /* padding: 20px; */
+            .card-header{
+                /* margin-top: 5%; */
+                font-family: Roboto, sans-serif;
+                font-size: 40px;
+                font-weight: 700;
+                line-height: 40px;
+                color: rgb(34, 34, 34);
+            }
+            .card-subtext{
+                font-family: "Open Sans", sans-serif;
+                font-size: 17px;
+                font-weight: 400;
+                line-height: 28.9px;
+                color: rgb(75, 79, 88);
+            }
+            .card-button{
+                padding: 10px 20px;
+                background-color: #000000;
+                border-radius: 5px;
+                /* color   white; */
+                font-family: "Open Sans", sans-serif;
+                font-size: 15px;
+                font-weight: 500;
+                line-height: 15px;
+                color: rgb(255, 255, 255);
+                display:flex;
+                align-items: center;
+            }
+            /* .card-image{
+                width: 50%;
+
+            } */
+        }
+    }
+}
+#second-card{
+    background-color: #def4fa;
+}
+.secondary-button{
+    background-color: #b41e24;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    align-items: center;
+    align-self: flex-end;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28.9px;
+    color: rgb(255, 255, 255);
+}
