--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -40,7 +40,7 @@
         }
         .nav-link-custom:hover{
             cursor: pointer;
-            color: #fb2c36;
+            color: #0a2868;
         }
     }    
 }
